# bf42lite

./: .gitignore  Directory tree.txt  GDD.md  README.md  bf42lite_client_dump.txt  bf42lite_docs_dump.txt  bf42lite_net_dump.txt  bf42lite_protocol_dump.txt  bf42lite_sim_dump.txt  bf42lite_tauri_dump.txt  bf_42_lite_simplified_docs.md  export-project-split.ps1  export-project.ps1  package.json  pnpm-workspace.yaml  tsconfig.base.json
apps/client-tauri/: index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo  ui.css  vite.config.ts
apps/client-tauri/src/: ClientGame.ts  InputManager.ts  sim.rs  (+8 more)
apps/client-tauri/src-tauri/: Cargo.toml  classes.json  game_config.toml  tauri.conf.json  weapons.json
apps/client-tauri/src-tauri/src/: config.rs  gameloop.rs  lib.rs  main.rs  network.rs  player.rs  protocol.rs  sim.rs
apps/client-tauri/src-tauri/src/maps/: mod.rs  warehouse.rs
apps/client-tauri/src-tauri/src/systems/: combat.rs  conquest.rs  mod.rs  movement.rs
docs/: 00_index.md  10_vision_core.md  20_design_gameplay.md  30_design_sim_arch.md  31_design_sim_movement.md  32_design_sim_weapons.md  40_design_net_protocol.md  41_design_net_transport.md  50_design_client_rendering.md  60_backlog_phase1_core_mvp.md  61_backlog_phase2_lan_loopback.md  62_backlog_phase3_visual_polish.md  63_backlog_phase4_core_gameplay.md  64_backlog_phase5_expansion.md  70_repo_structure.md  80_backlog_phase2_expansion.md  architecture_overview_v1_ascii.md  conquest.md  frametime_and_tickrate.md  graphics_scaling.md  map.md  performance_presets.md  weapons.md
tools/: check-workspace-deps.cjs
(+42 files in other folders)
