[package]
name = "bf42lite"
version = "1.3.0"
description = "A simplified LAN multiplayer FPS"
authors = ["Pontus Falkman"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
