[package]
name = "bf42lite"
version = "1.3.0"
description = "A simplified LAN multiplayer FPS"
authors = ["Pontus Falkman"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net"] }
futures-util = "0.3"
tokio-tungstenite = "0.21"
rmp-serde = "1"
tauri-plugin-shell = "2"
[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
